--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,8 @@
     "start": "ng serve",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "serve": "de watch& ng serve"
   },
   "private": true,
   "dependencies": {
@@ -42,5 +43,13 @@
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
     "typescript": "~2.0.3"
+  },
+  "doppler-effect": {
+    "dependencies": {
+      "input-file": "2.0.4"
+    },
+    "options": {
+      "install-dir": "src"
+    }
   }
 }
